# svg_cnc

./: README.md  driver.py  meson.build
inc/: bezdist.h  graphic.h  qbez.h  svg_path.h
src/: bezdist.c  dat2svg.c  graphic.c  main.c  qbez.c  svg_path.c
